--- a/front-end/src/components/Footer/footer.css
+++ b/front-end/src/components/Footer/footer.css
@@ -1,102 +1,42 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    box-sizing: border-box;
+.footer-custom {
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
-.footer {
-    padding: 30px 40px;
-    width: 100%;
-    background-color: #fff;
-
+.footer-bubble {
+  background: linear-gradient(180deg, #ffe7df 0%, #f2d6d6 50%, #fddfdd 100%);
+  width: 100%;
+  padding: 60px 30px 40px 30px;
+  box-shadow: 0 5px 15px rgb(255, 209, 217) rgba(216, 120, 120, 0.1); /* Nổi lên */
 }
 
-.footer .container {
-    max-width: 100%;
-    display: flex;
-    justify-content: space-between;
+.footer-bubble .social-icon:hover {
+  transform: scale(1.2);
+  transition: 0.3s;
 }
 
-.footer .container .about {
-    background-color: #fff;
-    max-width: 30%;
+.footer-bottom {
+  background-color: #524f4f;
+  color: #fff;
+  font-size: 0.9rem;
+}
+/* Link các trang */
+.page-link-hover {
+  color: #f0acac; /* Màu bình thường */
+  transition: all 0.3s ease;
+  position: relative;
 }
 
-.footer .container .about .detail .icon {
-    margin-top: 20px;
-    display: flex;
+/* Hover */
+.page-link-hover:hover {
+  color: #fbd9d6; /* Màu nổi bật khi hover */
+  font-weight: 600;
+  transform: translateY(-2px); /* Nhích lên nhẹ */
 }
 
-.footer .container .about .detail .icon li {
-    margin-left: 20px;
-    list-style: none;
-    padding: 10px 10px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    cursor: pointer;
-    transition: 0.5s;
+/* Khi active (ví dụ khi đang ở trang đó) */
+.page-link-hover.active {
+  color: #ff3b2e; /* Màu nổi bật hơn */
+  font-weight: 700;
 }
-
-.footer .container .about .detail .icon li:hover {
-    background: #0989ff;
-    color: #fff;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.footer .container .acount {
-    margin-right: 90px;
-    margin-top: 30px;
-
-}
-
-.footer .container .acount h3 {
-    font-size: 32px;
-    color: #010f1c;
-}
-
-.footer .container .acount ul {
-    margin-top: 10px;
-    margin-left: 20px;
-}
-
-.footer .container .acount ul li {
-    margin-top: 5px;
-    color: #010f1c;
-    font-size: 14px;
-    transition: 0.5s;
-    cursor: pointer;
-}
-
-.footer .container .acount ul li:hover {
-    color: #0989ff;
-
-}
-
-.footer .container .page {
-    margin-right: 90px;
-    margin-top: 30px;
-}
-
-.footer .container .page h3 {
-    font-size: 32px;
-    color: #010f1c;
-}
-
-.footer .container .page ul {
-    margin-top: 10px;
-    margin-left: 20px;
-}
-
-.footer .container .page ul li {
-    margin-top: 5px;
-    color: #010f1c;
-    font-size: 14px;
-    transition: 0.5s;
-    cursor: pointer;
-}
-
-.footer .container .page ul li:hover {
-    color: #0989ff;
-
-}
+.
